// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthGenesisVault migrate migrates from stakedEthToken 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 63554,
}
`;

exports[`EthGenesisVault pulls assets on claim exited assets 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 107765,
}
`;

exports[`EthGenesisVault pulls assets on multiple validators registration 1`] = `
Object {
  "calldataByteLength": 3620,
  "gasUsed": 757913,
}
`;

exports[`EthGenesisVault pulls assets on single validator registration 1`] = `
Object {
  "calldataByteLength": 1316,
  "gasUsed": 393562,
}
`;
